--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         </div>
     </div>
 
-    <script src="suncalc.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/suncalc/1.9.0/suncalc.min.js"></script>
     <script src="astronomy.js"></script>
     <script src="app.js"></script>
 </body>
