--- a/test.html
+++ b/test.html
@@ -49,7 +49,7 @@
     <div id="results"></div>
     <div id="summary" class="summary"></div>
 
-    <script src="suncalc.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/suncalc/1.9.0/suncalc.min.js"></script>
     <script src="astronomy.js"></script>
     <script>
         // Test utilities
